--- a/index.html
+++ b/index.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>inicio</title>
+  <title>sustentacion</title>
 </head>
-<body background="fondo.jpg">
-	<center>Daniel Cataño</center>
+<body >
+  <center>Daniel Cataño</center>
+  <center>2021</center>
+  <center>mis compromisos</center>
 
-	<center>Grado 8</center>
+  <a href="compromisos.html"></a>
 
-	<center>Neosistemas</center>
-	
-	<center>2021</center>
-<center><a href="periodo1.html">prisione aqui para ir al periodo 1 </a></center>
-<center><a href="periodo2.html">prisione aqui para ir al periodo 2 </a></center>
-<center><a href="periodo3.html">prisione aqui para ir al periodo 3 </a></center>
-<center><a href="periodo4.html">prisione aqui para ir al periodo 4 </a></center>
 </body>
 </html>
